# tracing-bug-poc

./: Cargo.toml  README.md
src/: main.rs
tracing-subscriber/src/: layer.rs
